# Micromagnetics

./: .gitignore  DockerMakefile  Dockerfile  LICENSE.md  Makefile  README.md  main.py  pyproject.toml  requirements.notebook.txt  requirements.txt  setup.cfg  setup.py  setup.sh
.github/workflows/: build_test.yml  pythonpackage.yml
mmag/unit_cell/: base.py  cell.py  fields.py
notebooks/: magnetic_field.ipynb  utils.py
pip-dep/: requirements.notebook.txt  requirements.test.txt  requirements.txt
scripts/: setup.zsh
src/mmag/exchange/: coefficients.py  exchange_terms.py  numeric_derivatives.py
src/mmag/unit_cell/: __init__.py  base.py  cell.py  fields.py
test/: test_unit_cell.py
test/mmag/exchange/: test_coefficients.py  test_derivatives.py  test_exchange_terms.py
test/mmag/unit_cell/: test_unit_cell.py
