[tool.poetry]
name = "mmag"
version = "0.1.0"
description = "A micromagnetics python package"
authors = ["Sebastia Agramunt Puig"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
flake8 = "^5.0.4"
black = "^22.6.0"
autoflake = "^1.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
